--- a/client/main.css
+++ b/client/main.css
@@ -1,13 +1,15 @@
 /*
   Global CSS file
 */
+@import 'Bootstrap/css/bootstrap.css'; 
+
 *{
 	margin: 0;
 	padding: 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	line-height: normal;
+	line-height: normal; 
 }
 
 ::-webkit-input-placeholder {
