--- a/client/main.css
+++ b/client/main.css
@@ -1,7 +1,7 @@
 /*
   Global CSS file
 */
-@import 'Bootstrap/css/bootstrap.css'; 
+@import 'Bootstrap/css/bootstrap.css';
 
 *{
 	margin: 0;
@@ -9,7 +9,7 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	line-height: normal; 
+	line-height: normal;
 }
 
 ::-webkit-input-placeholder {
@@ -24,13 +24,125 @@
 	color:#aaa;
 	font-weight: 300;
 }
+
 input:-moz-placeholder {
 	color:#aaa;
 	font-weight: 300;
 }
 
+/* Sign up form style*/
+img {
+  width: 80%;
+}
+
 body {
-	background: #FFF;
-	font-family: 'Lato', sans-serif;
-	font-size: 16px;
+ font-family: Calibri;
+ font-size: 14px;
+ background-size: 100% 200% !important;
+ background: linear-gradient(-10deg, #A0A0A0 10%, #202020 90%);
+}
+
+.user {
+ width: 50%;
+ max-width: 400px;
+ margin: 14vh auto;
+}
+
+.user__header {
+ text-align: center;
+}
+
+.user__title {
+ font-family: Calibri;
+ font-weight: 500;
+ color: white;
+ transition: 0.5s;
+}
+
+.form {
+ border-radius: 10px;
+ overflow: hidden;
+}
+
+.form__input {
+ display: block;
+ width: 100%;
+ padding: 20px;
+ font-family: Calibri;
+ border: 0;
+ outline: 0;
+ transition: 0.5s;
+}
+
+.btn {
+ display: block;
+ width: 100%;
+ padding: 20px;
+ font-family: Calibri;
+ font-size: 20px;
+ outline: 0;
+ border: 0;
+ color: white;
+ background: #CC0000 ;
+ transition: 0.5s;
+}
+
+/*Login style*/
+
+.Page{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  vertical-align: middle;
+}
+
+.Container{
+  width: 40vh;
+  height: 40vh;
+  max-width: 40vh;
+  max-height: 40vh;
+  border-radius: 30px;
+  display: block;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  margin: auto;
+  background-color: red;
+}
+
+.Login{
+  width: 100%;
+  height: 80%;
+  padding: 10%;
+  color: white;
+}
+
+.Input{
+  width: 100%;
+  height: 12.5%;
+  margin: 2.5% 0 2.5% 0;
+  border-radius: 5px;
+  color: black;
+}
+
+.Submit{
+  margin: 2.5% auto;
+  background-color: #e7e7e7; /* Gray */
+  border: none;
+  border-radius: 15px;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.Signup{
+  border-radius: 0 0 30px 30px;
+  width: 100%;
+  height: 20%;
+  padding: 10%;
+  background-color: #e7e7e7;
 }
