--- a/client/routes/Signup/signupstyle.css
+++ b/client/routes/Signup/signupstyle.css
@@ -1,81 +1,65 @@
+*{
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	line-height: normal;
+}
+
 
 body {
-  font-size: 14px;
-  background-size: 100% 200% !important;
-  background: linear-gradient(-10deg, #A0A0A0 10%, #202020 90%);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  vertical-align: middle;
-}
-
-.user {
-  width: 40vh;
-  height: 40vh;
-  max-width: 40vh;
-  max-height: 40vh;
-  border-radius: 30px;
-  display: block;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
-  margin: auto;
-  background-color: red;
-}
-
-.user__header {
-  text-align: center;
-
-}
-
-.user__title {
-  font-family: Calibri;
-  font-weight: 500;
-  color: white;
-  transition: 0.5s;
-  padding-top: 10px;
+ font-family: Calibri;
+ font-size: 14px;
+ background-size: 100% 200% !important;
+ background: linear-gradient(-10deg, #A0A0A0 10%, #202020 90%);
 }
 
 img {
   width: 80%;
 }
 
+.user {
+ width: 50%;
+ max-width: 400px;
+ margin: 14vh auto;
+}
+
+.user__header {
+ text-align: center;
+}
+
+.user__title {
+ font-family: Calibri;
+ font-weight: 500;
+ color: white;
+ transition: 0.5s;
+}
+
 .form {
-  border-radius: 10px;
-  overflow: hidden;
+ border-radius: 10px;
+ overflow: hidden;
 }
 
 .form__input {
-  display: block;
-  width: 100%;
-  padding: 20px;
-  font-family: Calibri;
-  border: 0;
-  outline: 0;
-  transition: 0.5s;
-  width: 100%;
-  height: 12.5%;
-  margin: 2.5% 0 2.5% 0;
-  border-radius: 5px;
-
+ display: block;
+ width: 100%;
+ padding: 20px;
+ font-family: Calibri;
+ border: 0;
+ outline: 0;
+ transition: 0.5s;
 }
 
-.form__group{
-  margin-top: 7px;
-  margin-bottom: 7px;
-  margin-left: 15px;
-  margin-right: 15px;
-}
 .btn {
-  margin: 2.5% auto;
-  background-color: #e7e7e7; /* Gray */
-  border: none;
-  border-radius: 15px;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+ display: block;
+ width: 100%;
+ padding: 20px;
+ font-family: Calibri;
+ font-size: 20px;
+ outline: 0;
+ border: 0;
+ color: white;
+ background: #CC0000 ;
+ transition: 0.5s;
 }
