--- a/client/main.css
+++ b/client/main.css
@@ -1,133 +1,45 @@
-/*
-  Global CSS file
-*/
-<<<<<<< HEAD
-@import 'Bootstrap/css/bootstrap.css';
-=======
->>>>>>> 69717b3052580755ae74668973d7296ea0405612
+/*use this css file ONLY for routes*/
+/*for components like header and footers, use separate css files - justin*/
+/*use lowercase*/
 
-*{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	line-height: normal;
-}
-
-::-webkit-input-placeholder {
-	color:#aaa;
-	font-weight: 300;
-}
-::-moz-placeholder {
-	color:#aaa;
-	font-weight: 300;
-}
-:-ms-input-placeholder {
-	color:#aaa;
-	font-weight: 300;
-}
-
-input:-moz-placeholder {
-	color:#aaa;
-	font-weight: 300;
-}
-
-/* Sign up form style*/
-img {
-  width: 80%;
-}
-
-body {
- font-family: Calibri;
- font-size: 14px;
- background-size: 100% 200% !important;
- background: linear-gradient(-10deg, #A0A0A0 10%, #202020 90%);
-}
-
-.user {
- width: 50%;
- max-width: 400px;
- margin: 14vh auto;
-}
-
-.user__header {
- text-align: center;
-}
-
-.user__title {
- font-family: Calibri;
- font-weight: 500;
- color: white;
- transition: 0.5s;
-}
-
-.form {
- border-radius: 10px;
- overflow: hidden;
-}
-
-.form__input {
- display: block;
- width: 100%;
- padding: 20px;
- font-family: Calibri;
- border: 0;
- outline: 0;
- transition: 0.5s;
-}
-
-.btn {
- display: block;
- width: 100%;
- padding: 20px;
- font-family: Calibri;
- font-size: 20px;
- outline: 0;
- border: 0;
- color: white;
- background: #CC0000 ;
- transition: 0.5s;
-}
-
-/*Login style*/
-
-.Page{
+/*Every element starts at the center if you put it inside a div called 'page'*/
+.page{
   width: 100vw;
   height: 100vh;
   display: flex;
   vertical-align: middle;
 }
 
-.Container{
+/*---------------------------Login Page---------------------------comment like this when creating a style for a new page - justin*/
+/*specify name of container for each pages*/
+.loginContainer{
   width: 40vh;
   height: 40vh;
-  max-width: 40vh;
-  max-height: 40vh;
   border-radius: 30px;
   display: block;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   margin: auto;
-  background-color: red;
+	background-color: #737373;
+	color: black;
 }
-
-.Login{
-  width: 100%;
+.login{
+	width: 100%;
   height: 80%;
   padding: 10%;
-  color: white;
+	font-family: Calibri;
 }
 
-.Input{
+.input{
+	font-family: Calibri;
   width: 100%;
   height: 12.5%;
   margin: 2.5% 0 2.5% 0;
-  border-radius: 5px;
-  color: black;
+	border-radius: 5px;
 }
 
-.Submit{
+.submit{
+	font-family: Calibri;
   margin: 2.5% auto;
   background-color: #e7e7e7; /* Gray */
   border: none;
@@ -141,11 +53,80 @@ body {
   margin: 4px 2px;
   cursor: pointer;
 }
-
-.Signup{
+.signup{
+	font-family: Calibri;
   border-radius: 0 0 30px 30px;
   width: 100%;
   height: 20%;
   padding: 10%;
   background-color: #e7e7e7;
+}
+/*******************************Sign up page************************************/
+.signupContainer{
+	width: 50vh;
+  height: 40vh;
+  border-radius: 30px;
+  display: block;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  margin: auto;
+	background-color: #737373;
+}
+.unb{
+	color: #CC0000;
+
+}
+.user {
+ 	width: 100%;
+ 	max-width: 400px;
+	margin:auto;
+}
+
+.user__header {
+ text-align: center;
+}
+
+.user__title {
+ font-family: Calibri;
+ color: white;
+ transition: 0.5s;
+ margin-bottom: 40px;
+}
+
+.form__input {
+ display: block;
+ width: 100%;
+ padding: 20px;
+ font-family: Calibri;
+ border: 0;
+ outline: 0;
+ transition: 0.5s;
+ margin-bottom: 10px;
+ border-radius: 10px;
+}
+
+.btn {
+ display: block;
+ width: 100%;
+ padding: 20px;
+ font-family: Calibri;
+ font-size: 20px;
+ outline: 0;
+ border: 0;
+ color: white;
+ background: #CC0000;
+ transition: 0.5s;
+ font-weight: bold;
+ font-size: 25px;
+ border-radius: 10px;
+}
+
+
+/*------------------------Instructor View------------------------*/
+/*-------home------*/
+.optionsContainer{
+	width: 50%;
+  height: 50%;
+  margin-left: 28%;
+	margin-top: 5%;
 }
