--- a/client/main.css
+++ b/client/main.css
@@ -92,6 +92,33 @@
  margin: auto;
 }
 
+.email {
+ float: left;
+ display: inline-block;
+ width: 80%;
+ padding: 20px;
+ font-family: Calibri;
+ border: 0;
+ outline: 0;
+ transition: 0.5s;
+ margin: auto;
+}
+
+.emailTag {
+  border-right: 2px;
+  border-right-style: solid;
+  border-color: white;
+ display: inline-block;
+ background-color: white;
+ width: 20%;
+ padding: 20px;
+ font-family: Calibri;
+ border: 0;
+ outline: 0;
+ transition: 0.5s;
+ margin: auto;
+}
+
 .underBar{
   padding: 10px;
 	font-family: Calibri;
@@ -129,6 +156,52 @@
   margin-top: 5%;
 }
 
+.courses{
+  margin-top: 30px;
+  margin-left: 200px;
+}
+
+.courseBackground{
+  width:100%;
+  height:100%;
+}
+
+.courseIcon{
+  border: 2px solid black;
+  border-radius: 10px;
+  display: inline-block;
+  margin-right: 150px;
+  margin-bottom:30px;
+  width:300px;
+  height:200px;
+}
+
+.courseTitle{
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+.addCourseBtn{
+  text-align: center;
+}
+
+.trackAttendanceBtn{
+  margin-left: 520px;
+  margin-top: 30px;
+}
+
+.removeCourse{
+  background-color: red;
+  border: none;
+  border-radius: 4px;
+  width:20px;
+  height:20px;
+  margin-top:5px;
+  float: right;
+  margin-right: 5px;
+  display: inline-block;
+}
+
 /*---------------------------Course Grid---------------------------*/
 .courseGridCell, td{
 
@@ -147,15 +220,25 @@
 	background: grey;
 }
 
+.studentRowEntry{
+  display: block;
+}
+
+.students{
+  margin-left: 250px;
+  margin-top: 50px;
+}
+
 .courseGrid{
 
-	margin-left: 400px;
-	margin-top: 150px;
+	margin-left:250px;
+	margin-top: 100px;
 
 }
 .welcomeContainer{
   margin-left: 120px;
-  width: 100%;
+  margin-right: 120px;
+
   height: 200px;
   background-color: black;
   position:relative;
@@ -177,6 +260,7 @@
 /*-----------Create Course------------*/
 
 .formContainer{
+  margin-top: 30px;
   margin-left: 200px;
   width: 80%;
 }
@@ -214,4 +298,11 @@
 }
 .courseName{
   width: 200px;
+}
+
+/*------------------Student View-------------------------*/
+
+.reserveSeatBtn{
+  margin-left: 790px;
+  margin-top: 30px;
 }
