--- a/client/main.css
+++ b/client/main.css
@@ -3,46 +3,95 @@
 /*use lowercase*/
 
 /*----------------------------global components----------------------*/
-.navbar{
-  marginBottom: 0px;
-  background-color: red;
-}
-
-.homeButton{
-  margin-top: 20px;
-  margin-left: 20px;
+.header{
+  margin-top: 25px;
   color: white;
+  background: #CC0000;
+  height: 230px;
+  padding-top: 50px;
+  margin-bottom: 30px;
+  padding-right: 50px;
+  /*bottom shadow effect*/
+  border-bottom-style: solid;
+  border-bottom-width: 10px;
+  border-bottom-color: #b30000;
 }
-
-.logoutButton{
-  float: right;
-  color: white;
-  margin-right: 10px;
+.logout{
   cursor: pointer;
 }
-
-.sidenav {
-    height: 100%;
-    width: 7%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color:#CC0000;
-    overflow-x: hidden;
-    padding-top: 20px;
+.logout, .home{
+  color: #FFFFFF;
+  float: right;
+  display: inline;
+  margin-right: 50px;
+  text-decoration: none;
+}
+.logo{
+  float: left;
+  margin-left: 50px;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #b30000;
+}
+.home, .logo{
+  display: inline;
 }
 
-.sidenav a {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 19px;
-    color: white;
-    display: block;
+.headerTitle{
+  margin-top: 70px;
+  text-align: center;
+  font-size: 50px;
 }
-.sidenav a:hover {
-    background-color: #202020;
-    color: white;
+.mainBody{
+  height: 600px;
+  background: #a6a6a6;
+  padding-top: 1px;
+}
+.mainBodyTitle{
+  color: white;
+  text-align: center;
+  font-size: 35px;
+}
+.mainBodyWrapper{
+  background: #d9d9d9;
+  float: center;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  padding-top: 100px;
+  padding: 50px;
+}
+.footer{
+  height: 88px;
+  background: #CC0000;
+  border-bottom-style: solid;
+  border-bottom-width: 10px;
+  border-bottom-color: #990000;
+
+}
+.buttonWrapper{
+  margin: 0 auto;
+  width: 50%;
+  padding-left: 20%;
+}
+.instructorButton{
+  background: #a6a6a6;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
 }
 /*Every element starts at the center if you put it inside a div called 'page'*/
 .page{
@@ -51,13 +100,6 @@
   display: flex;
   vertical-align: middle;
 }
-
-/*body {
- font-family: Calibri;
- font-size: 14px;
- background-size: 100% 200% !important;
- background: linear-gradient(-10deg, #A0A0A0 10%, #202020 90%);
-}*/
 
 /*---------------------------Login Page---------------------------comment like this when creating a style for a new page - justin*/
 /*specify name of container for each pages*/
@@ -170,35 +212,35 @@
   margin-top: 5%;
 }
 
-.courses{
-  margin-top: 30px;
-  margin-left: 200px;
-}
-
 .courseBackground{
   width:100%;
   height:100%;
 }
 
 .courseIcon{
-  border: 2px solid black;
-  border-radius: 10px;
+  background: white;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   display: inline-block;
-  margin-right: 150px;
+  margin-right: 50px;
   margin-bottom:30px;
   width:300px;
   height:200px;
 }
-
-.courseTitle{
-  margin-left: 10px;
-  margin-top: 5px;
+.courseIconBackground{
+  height: 100%;
 }
-
-.addCourseBtn{
+.courseNameWrapper{
+  background: #000000;
   text-align: center;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
-
+.courseTitle{
+  color: #FFFFFF;
+  text-decoration: none;
+  cursor: pointer;
+}
 .trackAttendanceBtn{
   margin-left: 520px;
   margin-top: 30px;
@@ -290,11 +332,9 @@
 /*-----------Create Course------------*/
 
 .formContainer{
-  margin-top: 30px;
-  margin-left: 200px;
-  width: 80%;
+  margin: 0 auto;
+  width: 60%;
 }
-
 /*------------------Instructor Course list------------------*/
 .instructorCourseContainer{
   margin-left: 700px;
