--- a/client/main.css
+++ b/client/main.css
@@ -46,7 +46,7 @@
   font-size: 50px;
 }
 .mainBody{
-  height: 600px;
+  height: 100%;
   background: #a6a6a6;
   padding-top: 1px;
 }
@@ -59,7 +59,7 @@
   background: #d9d9d9;
   float: center;
   width: 80%;
-  height: 100%;
+  height: 600px;
   margin: 0 auto;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
@@ -72,7 +72,8 @@
   border-bottom-style: solid;
   border-bottom-width: 10px;
   border-bottom-color: #990000;
-
+  bottom:0;
+  width:100%;
 }
 .buttonWrapper{
   margin: 0 auto;
@@ -275,13 +276,13 @@
 }
 
 /*---------------------------Course Grid---------------------------*/
-.courseGridCell, td{
-
+.courseGridCell{
+  border-width: 10px;
+  border-color: #d9d9d9;
 	width:70px;
 	height: 50px;
 	text-align: center;
-	border: 1px solid black;
-
+  background-color:white;
 }
 
 .courseGridCell:hover{
@@ -302,10 +303,13 @@
 }
 
 .courseGrid{
-
-	margin-left:250px;
-	margin-top: 100px;
-
+  border-radius: 15px;
+  background: white;
+  width: 100%;
+	margin-top: 10px;
+}
+.courseTable{
+  width: 100%;
 }
 .welcomeContainer{
   margin-left: 120px;
