--- a/client/main.css
+++ b/client/main.css
@@ -49,6 +49,7 @@
   height: 100%;
   background: #a6a6a6;
   padding-top: 1px;
+  padding-bottom: 100px;
 }
 .mainBodyTitle{
   color: white;
@@ -63,8 +64,7 @@
   margin: 0 auto;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
-  padding-top: 100px;
-  padding: 50px;
+  padding-top: 10px;
 }
 .footer{
   height: 88px;
@@ -73,8 +73,10 @@
   border-bottom-width: 10px;
   border-bottom-color: #990000;
   bottom:0;
+  position:fixed;
   width:100%;
 }
+
 .buttonWrapper{
   margin: 0 auto;
   width: 50%;
