--- a/client/main.css
+++ b/client/main.css
@@ -94,7 +94,44 @@
   margin: auto;
 	background-color: #202020;
 }
+.errorMessageWithBox{
+  display: block;
+  margin: auto;
+  height: 50vh;
+}
+.noInput{
+  color: #9F6000;
+  background-color: #FEEFB3;
+  background-image: url('./images/png/warning.png');
+  visibility: hidden;
+  display: none;
+}
+.authenticationError{
+  color: #D8000C;
+  background-color: #FFBABA;
+  background-image: url('./images/png/error.png');
+  visibility: hidden;
+  display: none;
 
+}
+.successfulLogin{
+  color: #4F8A10;
+  background-color: #DFF2BF;
+  background-image:url('./images/png/success.png');
+  visibility: hidden;
+  display: none;
+}
+.errorBoxTemplate{
+  visibility: hidden;
+}
+.noInput, .authenticationError, .successfulLogin, .errorBoxTemplate{
+  border: 1px solid;
+  border-radius: 15px;
+  margin: 10px 0px;
+  padding:15px 10px 15px 50px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+}
 .appName{
 	color: #CC0000;
   margin: auto;
@@ -103,6 +140,7 @@
 .userHeader {
  text-align: center;
  margin: auto;
+ padding-top: 1px;
 }
 
 .userTitle {
@@ -183,6 +221,13 @@
 .form {
  overflow: hidden;
 }
+
+.errorMessage{
+
+}
+
+
+
 
 /*------------------------Instructor View------------------------*/
 /*----------------home-------------*/
