--- a/client/main.css
+++ b/client/main.css
@@ -44,6 +44,7 @@
   text-align: center;
   font-size: 35px;
 }
+
 .mainBodyWrapper{
   background: #d9d9d9;
   float: center;
@@ -81,6 +82,7 @@
   display: flex;
   vertical-align: middle;
 }
+
 
 /*---------------------------Login Page---------------------------comment like this when creating a style for a new page - justin*/
 /*specify name of container for each pages*/
@@ -420,7 +422,7 @@
   margin-top: 20px;
   margin-left: 150px;
 }
-.instCourseList, th, td{
+.instCourseList{
   background-color: #ffb3b3;
   border-collapse: collapse;
   border: 1px solid #ff9999;
@@ -437,6 +439,70 @@
 .reserveSeatBtn{
   margin-left: 790px;
   margin-top: 30px;
+}
+
+
+/*-------------------RegisterCourse----------------------*/
+
+.registerContainer{
+  width: 50%;
+  height: 50%;
+  margin-left: 28%;
+  margin-top: 5%;
+}
+
+.searchBox{
+  border-radius: 25px;
+  width: 80%;
+  margin: 3%;
+}
+
+.greyTable {
+border: 4px solid #878787;
+background-color: #FFFFFF;
+width: 100%;
+text-align: left;
+border-collapse: collapse;
+border-radius: 25px;
+}
+
+
+.thIn{
+  width: 20%;
+  background: #878787;
+  font-size: 15px;
+  font-weight: bold;
+  color: #FFFFFF;
+
+}
+
+.tdIn {
+
+  width: 25%;
+  font-size: 13px;
+}
+
+.rowIn{
+  margin: 5px;
+  padding: 2px 15px 2px 15px;
+  width: 100%;
+  border-radius: 25px;
+  border: 3px solid #808080;
+  background: white;
+   box-shadow: 2px 2px 1px #888888;
+}
+
+.buttonIn {
+  background-color: #E80001;
+  padding: 2px 15px 2px 15px;
+  border-radius: 25px;
+  font-size: 13px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.buttonIn:hover {
+  background: #f5e100;
 }
 
 /*-----------------Not Authorized Page-------------------*/
