--- a/client/main.css
+++ b/client/main.css
@@ -496,8 +496,23 @@
 }
 
 /*------------------Instructor Course Overview-------------*/
-.dateStatWrapper{
-
+.divtable {
+  display: table;
+  width: auto;
+  background-color: #eee;
+  border: 1px solid #666666;
+  border-spacing: 5px; /* cellspacing:poor IE support for  this */
+}
+.divtablerow {
+  display: table-row;
+  width: auto;
+  clear: both;
+}
+.divtablecol {
+  float: left; /* fix for  buggy browsers */
+  display: table-column;
+  width: 200px;
+  background-color: #ccc;
 }
 
 .statDirect{
@@ -525,6 +540,24 @@
   visibility: hidden;
 }
 
+.statisticsViewHidden{
+  width: 100%;
+  height: 0;
+	overflow: hidden;
+}
+.closeStatViewButton{
+  background: #a6a6a6;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 20px;
+  width: 180px;
+  margin: auto;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  padding-bottom: 5px;
+  margin-top: 80px;
+}
 /*------------------Student View-------------------------*/
 
 .reserveSeatBtn{
