--- a/client/main.css
+++ b/client/main.css
@@ -499,9 +499,12 @@
 .divtable {
   display: table;
   width: auto;
-  background-color: #eee;
-  border: 1px solid #666666;
+  background-color: #FFFFFF;
   border-spacing: 5px; /* cellspacing:poor IE support for  this */
+  margin: auto;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 20px;
 }
 .divtablerow {
   display: table-row;
@@ -512,8 +515,8 @@
   float: left; /* fix for  buggy browsers */
   display: table-column;
   width: 200px;
-  background-color: #ccc;
 }
+
 
 .statDirect{
   transition: background-color 0.8s ease;
