--- a/client/main.css
+++ b/client/main.css
@@ -351,7 +351,9 @@
 }
 
 .courseGridCell:hover{
-	background: grey;
+	background: #000000;
+  transition: all 0.6s;
+  color: #FFFFFF;
 }
 
 .courseGridCellClicked{
