--- a/client/main.css
+++ b/client/main.css
@@ -276,12 +276,13 @@
 }
 
 .datePicker{
-  margin-left: 200px;
-  font-size: 150%;
+  font-size: 200%;
+  text-align: center;
 
 }
 .datePickerWrapper{
   width: 100px;
+  margin-left: 41%;
 }
 
 .mainBodyTitleInstructorCourseOverview{
@@ -382,11 +383,12 @@
 	width:70px;
 	height: 50px;
 	text-align: center;
-  background-color:white;
+  background-color:#FFFFFF;
+  color: black;
 }
 
 .courseGridCell:hover{
-	background: #CC0000;
+	background: #ff1a1a;
   transition: all 0.6s;
   font-size: 15px;
   font-weight: bold;
@@ -394,7 +396,7 @@
 }
 
 .courseGridCellClicked{
-	background: #CC0000;
+	background: #ff1a1a;
   font-size: 15px;
   font-weight: bold;
   color: #FFFFFF;
@@ -543,7 +545,6 @@
   width: auto;
   background-color: #FFFFFF;
   border-spacing: 5px; /* cellspacing:poor IE support for  this */
-  margin: auto;
   border-radius: 5px;
   text-align: center;
   font-size: 20px;
@@ -556,16 +557,66 @@
 .divtablecol {
   float: left; /* fix for  buggy browsers */
   display: table-column;
-  width: 200px;
+  width: 140px;
 }
-
-
-.statDirect{
+.statTableWrapper{
+  background: #d9d9d9;
+  float: left;
+  width: 100%;
+  border-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 10%;
+}
+.query{
+  width: auto;
+  background-color: #FFFFFF;
+  border-spacing: 5px; /* cellspacing:poor IE support for  this */
+  border-radius: 5px;
+  text-align: center;
+  font-size: 20px;
+}
+.queryBodyTitle{
+  color: white;
+  font-size: 35px;
+  text-align: right;
+  margin-bottom: 16px;
+}
+.queriesBodyWrapper{
+  background: #d9d9d9;
+  float: right;
+  width: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.queriesDirect{
   transition: background-color 0.8s ease;
   margin-top: 0px;
   float: right;
   background-color: #ffffff;
   margin-right: 195px;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 5px;
+}
+.queriesDirect:hover{
+  background-color: #000000;
+  color: #ffffff;
+}
+.statDirect{
+  transition: background-color 0.8s ease;
+  margin-top: 0px;
+  float: left;
+  background-color: #ffffff;
+  margin-left: 195px;
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -586,22 +637,55 @@
 }
 
 .statisticsViewHidden{
-  width: 100%;
+  width: 60%;
   height: 0;
 	overflow: hidden;
+  margin-left: 4%;
+  margin-right: 30px;
+  display: inline-block;
+  float: left;
 }
+.queriesViewHidden{
+  width: 24%;
+  height: 0;
+  overflow: hidden;
+  margin-left: 1255px;
+  display: block;
+}
+
+
 .closeStatViewButton{
   background: #a6a6a6;
   border-radius: 5px;
   color: #FFFFFF;
   font-size: 20px;
   width: 180px;
-  margin: auto;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   padding-bottom: 5px;
   margin-top: 10px;
+}
+.studentQueryViewButton{
+  background: #a6a6a6;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 20px;
+  width: 160px;
+  margin-left: 30px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  padding-bottom: 5px;
+  margin-top: -15px;
+}
+.missedDaysInput{
+  width: 50%;
+  margin-top: 10px;
+  text-align: center;
+}
+.studentQueryViewButton, .missedDaysInput{
+  display: inline-block;
 }
 /*------------------Student View-------------------------*/
 
@@ -676,16 +760,29 @@ border-radius: 25px;
 
 .statisticBodyTitle{
   color: white;
-  text-align: center;
   font-size: 35px;
   height: 0px;
   overflow: hidden;
+  margin-left: 115px;
 }
 .mainBodyTitleOverview{
   color: white;
   text-align: center;
   font-size: 35px;
-  height: 0px;
+  height: 40px;
+}
+.mainBodyTitleOverview1{
+  color: white;
+  text-align: center;
+  font-size: 35px;
+  height: 40px;
+}
+.clickInstruction{
+  font-size: 13px;
+  font-weight: bold;
+  margin-top: 0px;
+  height: 6px;
+  text-align: center;
 }
 
 /*-----------------Not Authorized Page-------------------*/
