--- a/client/main.css
+++ b/client/main.css
@@ -118,6 +118,13 @@
   vertical-align: middle;
 }
 
+.img{
+  width:100%;
+  max-width:100%;
+  height:100%;
+  max-width:100%;
+}
+
 
 /*---------------------------Login Page---------------------------comment like this when creating a style for a new page - justin*/
 /*specify name of container for each pages*/
@@ -328,8 +335,22 @@
   height:200px;
   position:relative;
 }
+.courseIconBackgroundStudent{
+  height: 100%;
+  width:100%;
+  background-image:url("images/png/books.png");
+}
+.courseIconBackgroundInst{
+  height: 100%;
+  width:100%;
+  max-height: 100%;
+  max-width:100%;
+  background-image:url("images/png/chalkboard.jpg");
+}
 .courseIconBackground{
   height: 100%;
+  width:100%;
+  background-image:url("images/png/books.png");
 }
 .courseNameWrapper{
   background: #000000;
@@ -526,9 +547,8 @@
   margin-left: 150px;
 }
 .instCourseList, th, td{
-  background-color: #ffb3b3;
   border-collapse: collapse;
-  border: 1px solid #ff9999;
+  border: 1px solid #ffffff;
 }
 .courseNum{
   width: 100px;
@@ -638,15 +658,14 @@ border-radius: 25px;
 
 .thIn{
   width: 20%;
-  background: #878787;
+  background-color: #878787;
   font-size: 15px;
   font-weight: bold;
-  color: #FFFFFF;
-
+  color: white;
 }
 
 .tdIn {
-
+  background-color: white;
   width: 25%;
   font-size: 13px;
 }
