--- a/client/main.css
+++ b/client/main.css
@@ -729,7 +729,12 @@
   width: 80%;
   margin: 3%;
 }
-
+.searchCourseButton{
+  text-align: center;
+  width: 130px;
+  border-radius: 25px;
+  font-size: 15px;
+}
 .greyTable {
 border: 4px solid #878787;
 background-color: #FFFFFF;
@@ -746,12 +751,13 @@ border-radius: 25px;
   font-size: 15px;
   font-weight: bold;
   color: white;
+  text-align: center;
 }
 
 .tdIn {
   background-color: white;
   width: 25%;
-  font-size: 13px;
+  font-size: 15px;
 }
 
 .rowIn{
@@ -761,16 +767,18 @@ border-radius: 25px;
   border-radius: 25px;
   border: 3px solid #808080;
   background: white;
-   box-shadow: 2px 2px 1px #888888;
+  box-shadow: 2px 2px 1px #888888;
 }
 
 .buttonIn {
   background-color: #E80001;
   padding: 2px 15px 2px 15px;
   border-radius: 25px;
-  font-size: 13px;
+  border-color: #E80001;
+  font-size: 15px;
   color: #ffffff;
   text-align: center;
+  margin-right: 35px;
 }
 
 .buttonIn:hover {
