--- a/client/main.css
+++ b/client/main.css
@@ -504,6 +504,16 @@
   border-color: #d9d9d9;
 }
 
+.closedSeat2{
+  border-width: 10px;
+  width:70px;
+  height: 50px;
+  text-align: center;
+  background: #000000;
+  border-color: #d9d9d9;
+  pointer-events: none;
+}
+
 .closedSeat:hover{
   transform: scale(1.1);
 }
@@ -515,6 +525,16 @@
   text-align: center;
   background-image: url("./images/stripes.jpg");
   border-color: #d9d9d9;
+}
+
+.auditableSeat2{
+  border-width: 10px;
+  width:70px;
+  height: 50px;
+  text-align: center;
+  background-image: url("./images/stripes.jpg");
+  border-color: #d9d9d9;
+  pointer-events: none;
 }
 
 .auditableSeat:hover {
