--- a/client/main.css
+++ b/client/main.css
@@ -663,7 +663,7 @@
 }
 .queriesDirect{
   transition: background-color 0.8s ease;
-  margin-top: 0px;
+  margin-top: 3px;
   float: right;
   background-color: #ffffff;
   margin-right: 195px;
@@ -679,7 +679,7 @@
 }
 .statDirect{
   transition: background-color 0.8s ease;
-  margin-top: 0px;
+  margin-top: 3px;
   float: left;
   background-color: #ffffff;
   margin-left: 195px;
@@ -690,6 +690,22 @@
   border-radius: 5px;
 }
 .statDirect:hover{
+  background-color: #000000;
+  color: #ffffff;
+}
+.downloadDirect{
+  transition: background-color 0.8s ease;
+  margin-top: 3px;
+  float: right;
+  background-color: #ffffff;
+  margin-right: 195px;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 5px;
+}
+.downloadDirect:hover{
   background-color: #000000;
   color: #ffffff;
 }
