Expanded input text field for email

--- a/client/main.css
+++ b/client/main.css
@@ -552,6 +552,9 @@
   width: 50%;
   margin-left: 27%;
 }
+.formatIn {
+  height: 100px;
+}
 .controlLabel{
   background-color: #ffffff;
   color: #999999;
